fortran/src/f77_lexer_gen.c

#line 1 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
/* f77_lexer.rl -- Ragel -G2 token scanner for Fortran 77.
 *
 * Build:  bash gen_lexer.sh   ->  f77_lexer_gen.c
 *
 * Runs over one ASSEMBLED statement at a time (see f77_card.h, which
 * handles the card-image layer: columns, continuations, blank squeezing
 * and Hollerith counts).  By the time the scanner sees text, blanks are
 * gone and case is folded, so the token grammar is ordinary.
 *
 * Two Fortran-specific hazards are handled here:
 *
 *   1. `1.EQ.2` -- longest-match would take `1.` as a REAL constant and
 *      leave `EQ.2`.  The dotted operators are matched at higher
 *      priority, and f77_number() additionally backs off the trailing
 *      dot when what follows is a dotted operator, so the scanner
 *      resumes at the `.` and yields `1` `.EQ.` `2`.
 *
 *   2. There are NO reserved words.  The scanner never classifies a
 *      keyword: `IF`, `DO` and `FORMAT` come back as T_NAME and the
 *      parser decides from context.  This is what lets `DO10I=1.10` be
 *      an assignment while `DO 10 I=1,10` is a loop.
 */

/* === Token kinds === */

#define T_EOF     0
#define T_NAME    1
#define T_ICON    2   /* integer constant          -> lex_ival */
#define T_RCON    3   /* REAL constant             -> lex_dval */
#define T_DCON    4   /* DOUBLE PRECISION constant -> lex_dval */
#define T_SCON    5   /* character / Hollerith     -> lex_sidx, lex_slen */
#define T_LP      6
#define T_RP      7
#define T_COMMA   8
#define T_ASSIGN  9
#define T_PLUS   10
#define T_MINUS  11
#define T_STAR   12
#define T_SLASH  13
#define T_POWER  14   /* ** */
#define T_CONCAT 15   /* // */
#define T_COLON  16
#define T_EQ     17
#define T_NE     18
#define T_LT     19
#define T_LE     20
#define T_GT     21
#define T_GE     22
#define T_AND    23
#define T_OR     24
#define T_NOT    25
#define T_EQV    26
#define T_NEQV   27
#define T_TRUE   28
#define T_FALSE  29

/* === Current token === */

static int    lx_t;                    /* token kind */
static char   lex_name[F77_MAX_NAME];  /* T_NAME text (upper case) */
static int    lex_namelen;
static int    lex_ival;                /* T_ICON value */
static double lex_dval;                /* T_RCON / T_DCON value */
static int    lex_sidx;                /* T_SCON: string-pool index */
static int    lex_slen;                /* T_SCON: length in bytes */

/* Scanner state, saved between calls (one statement at a time). */
static char *lx_rp;
static char *lx_rpe;
static int   lx_rcs;
static int   lx_ract;
static char *lx_rts;
static char *lx_rte;

/* === Helpers === */

static void f77_name_tok(char *ts, char *te) {
    int n;
    n = (int)(te - ts);
    if (n > F77_MAX_NAME - 1) n = F77_MAX_NAME - 1;
    memcpy(lex_name, ts, n);
    lex_name[n] = 0;
    lex_namelen = n;
    lx_t = T_NAME;
}

/* A character constant, already normalised by the card reader so that
 * '' is the only escape.  Interned into the shared string pool. */
static void f77_string_tok(char *ts, char *te) {
    char buf[F77_MAX_STMT];
    char *p;
    int n;
    p = ts + 1;          /* skip opening quote */
    n = 0;
    while (p < te - 1) {
        if (*p == '\'' && p + 1 < te - 1 && p[1] == '\'') p = p + 1;
        buf[n] = *p;
        n = n + 1;
        p = p + 1;
    }
    lex_sidx = f77_intern_str(buf, n);
    lex_slen = n;
    lx_t = T_SCON;
}

static int f77_digits_val(char *s, char *e) {
    int v;
    v = 0;
    while (s < e && *s >= '0' && *s <= '9') { v = v * 10 + (*s - '0'); s = s + 1; }
    return v;
}

/* Is `s` the start of a dotted operator?  Used to decide whether a
 * trailing '.' on a numeric literal really belongs to the number. */
static int f77_is_dotop(char *s, char *e) {
    int n;
    if (s >= e || *s != '.') return 0;
    n = 1;
    while (s + n < e && ((s[n] >= 'A' && s[n] <= 'Z'))) n = n + 1;
    if (n == 1) return 0;
    if (s + n >= e || s[n] != '.') return 0;
    return 1;
}

/* Scan a numeric literal.  Returns the number of characters actually
 * consumed, which may be FEWER than Ragel matched: `1.EQ.2` matches
 * `1.` but must consume only `1`, leaving the dot to start .EQ. */
static int f77_number(char *ts, char *te, char *pe) {
    char buf[128];
    char *p;
    int n;
    int isreal;
    int isdbl;

    /* Back off a trailing dot that introduces a dotted operator. */
    if (te > ts && te[-1] == '.' && f77_is_dotop(te - 1, pe)) te = te - 1;

    isreal = 0;
    isdbl = 0;
    n = 0;
    p = ts;
    while (p < te && n < 127) {
        if (*p == '.') isreal = 1;
        if (*p == 'D' || *p == 'd') { isdbl = 1; isreal = 1; buf[n] = 'E'; }
        else if (*p == 'E' || *p == 'e') { isreal = 1; buf[n] = 'E'; }
        else buf[n] = *p;
        n = n + 1;
        p = p + 1;
    }
    buf[n] = 0;

    if (!isreal) {
        lex_ival = f77_digits_val(ts, te);
        lx_t = T_ICON;
    } else {
        lex_dval = strtod(buf, NULL);
        lx_t = isdbl ? T_DCON : T_RCON;
    }
    return (int)(te - ts);
}


#line 229 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"



#line 170 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
static const int f77_lexer_start = 38;
static const int f77_lexer_first_final = 38;
static const int f77_lexer_error = 0;

static const int f77_lexer_en_main = 38;


#line 232 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"

/* Point the scanner at the statement the card reader just assembled. */
static void f77_lex_stmt_init(void) {
    int cs;
    int act;
    char *ts;
    char *te;
    lx_rp = lx_stmt;
    lx_rpe = lx_stmt + lx_stmt_len;
    
#line 189 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	{
	cs = f77_lexer_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 242 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
    lx_rcs = cs;
    lx_ract = act;
    lx_rts = ts;
    lx_rte = te;
    lx_t = T_EOF;
}

/* Scan one token from the current statement. */
static void f77_tok(void) {
    char *p;
    char *pe;
    char *eof;
    char *ts;
    char *te;
    int cs;
    int act;

    p = lx_rp;
    pe = lx_rpe;
    eof = pe;
    cs = lx_rcs;
    act = lx_ract;
    ts = lx_rts;
    te = lx_rte;

    lx_t = T_EOF;
    if (p >= pe) return;

    
#line 227 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 1 "NONE"
	{	switch( act ) {
	case 0:
	{{goto st0;}}
	break;
	case 18:
	{{p = ((te))-1;} f77_string_tok(ts, te); {p++; cs = 38; goto _out;} }
	break;
	}
	}
	goto st38;
tr13:
#line 192 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{{p = ((te))-1;}{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr18:
#line 179 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_AND;   {p++; cs = 38; goto _out;} }}
	goto st38;
tr20:
#line 173 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_EQ;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr22:
#line 182 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_EQV;   {p++; cs = 38; goto _out;} }}
	goto st38;
tr27:
#line 185 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_FALSE; {p++; cs = 38; goto _out;} }}
	goto st38;
tr30:
#line 178 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_GE;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr31:
#line 177 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_GT;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr34:
#line 176 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_LE;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr35:
#line 175 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_LT;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr38:
#line 174 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_NE;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr41:
#line 183 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_NEQV;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr43:
#line 181 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_NOT;   {p++; cs = 38; goto _out;} }}
	goto st38;
tr45:
#line 180 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_OR;    {p++; cs = 38; goto _out;} }}
	goto st38;
tr49:
#line 184 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_TRUE;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr50:
#line 188 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{{p = ((te))-1;}{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr53:
#line 200 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{{p = ((te))-1;}{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr58:
#line 214 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_LP;     {p++; cs = 38; goto _out;} }}
	goto st38;
tr59:
#line 215 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_RP;     {p++; cs = 38; goto _out;} }}
	goto st38;
tr61:
#line 218 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_PLUS;   {p++; cs = 38; goto _out;} }}
	goto st38;
tr62:
#line 216 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_COMMA;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr63:
#line 219 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_MINUS;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr67:
#line 222 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_COLON;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr68:
#line 217 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_ASSIGN; {p++; cs = 38; goto _out;} }}
	goto st38;
tr69:
#line 226 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{ /* skip */ }}
	goto st38;
tr70:
#line 209 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{ f77_name_tok(ts, te); {p++; cs = 38; goto _out;} }}
	goto st38;
tr71:
#line 206 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{ f77_string_tok(ts, te); {p++; cs = 38; goto _out;} }}
	goto st38;
tr72:
#line 220 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{ lx_t = T_STAR;   {p++; cs = 38; goto _out;} }}
	goto st38;
tr73:
#line 212 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_POWER;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr74:
#line 192 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr76:
#line 221 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{ lx_t = T_SLASH;  {p++; cs = 38; goto _out;} }}
	goto st38;
tr77:
#line 213 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p+1;{ lx_t = T_CONCAT; {p++; cs = 38; goto _out;} }}
	goto st38;
tr78:
#line 200 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr81:
#line 188 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
tr83:
#line 196 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{te = p;p--;{
            p = ts + f77_number(ts, te, pe) - 1;
            {p++; cs = 38; goto _out;}
        }}
	goto st38;
st38:
#line 1 "NONE"
	{ts = 0;}
#line 1 "NONE"
	{act = 0;}
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 1 "NONE"
	{ts = p;}
#line 412 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	switch( (*p) ) {
		case 9: goto st39;
		case 32: goto st39;
		case 36: goto st40;
		case 39: goto st1;
		case 40: goto tr58;
		case 41: goto tr59;
		case 42: goto st42;
		case 43: goto tr61;
		case 44: goto tr62;
		case 45: goto tr63;
		case 46: goto st2;
		case 47: goto st45;
		case 58: goto tr67;
		case 61: goto tr68;
		case 95: goto st40;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr66;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st40;
	} else
		goto st40;
	goto st0;
st0:
cs = 0;
	goto _out;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 9: goto st39;
		case 32: goto st39;
	}
	goto tr69;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 36: goto st40;
		case 95: goto st40;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st40;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st40;
	} else
		goto st40;
	goto tr70;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	if ( (*p) == 39 )
		goto tr2;
	goto st1;
tr2:
#line 1 "NONE"
	{te = p+1;}
#line 206 "/Users/sdennis/slow-32/fortran/src/f77_lexer.rl"
	{act = 18;}
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 485 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	if ( (*p) == 39 )
		goto st1;
	goto tr71;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) == 42 )
		goto tr73;
	goto tr72;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 65: goto st5;
		case 69: goto st8;
		case 70: goto st11;
		case 71: goto st16;
		case 76: goto st19;
		case 78: goto st22;
		case 79: goto st28;
		case 84: goto st30;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr3;
	goto st0;
tr3:
#line 1 "NONE"
	{te = p+1;}
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 521 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	if ( (*p) < 68 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 69 ) {
		if ( 100 <= (*p) && (*p) <= 101 )
			goto st3;
	} else
		goto st3;
	goto tr74;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 43: goto st4;
		case 45: goto st4;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st44;
	goto tr13;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st44;
	goto tr13;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st44;
	goto tr74;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 78 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 68 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 46 )
		goto tr18;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 81 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 46: goto tr20;
		case 86: goto st10;
	}
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 46 )
		goto tr22;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 65 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 76 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 83 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 69 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 46 )
		goto tr27;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 69: goto st17;
		case 84: goto st18;
	}
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 46 )
		goto tr30;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 46 )
		goto tr31;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 69: goto st20;
		case 84: goto st21;
	}
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 46 )
		goto tr34;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 46 )
		goto tr35;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 69: goto st23;
		case 79: goto st26;
	}
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 46: goto tr38;
		case 81: goto st24;
	}
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 86 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 46 )
		goto tr41;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 84 )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 46 )
		goto tr43;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 82 )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 46 )
		goto tr45;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 82 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 85 )
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 69 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 46 )
		goto tr49;
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	if ( (*p) == 47 )
		goto tr77;
	goto tr76;
tr66:
#line 1 "NONE"
	{te = p+1;}
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 784 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	if ( (*p) == 46 )
		goto tr79;
	if ( (*p) < 68 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr66;
	} else if ( (*p) > 69 ) {
		if ( 100 <= (*p) && (*p) <= 101 )
			goto st36;
	} else
		goto st36;
	goto tr78;
tr79:
#line 1 "NONE"
	{te = p+1;}
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 804 "/Users/sdennis/slow-32/fortran/src/f77_lexer_gen.c"
	if ( (*p) < 68 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr79;
	} else if ( (*p) > 69 ) {
		if ( 100 <= (*p) && (*p) <= 101 )
			goto st34;
	} else
		goto st34;
	goto tr81;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 43: goto st35;
		case 45: goto st35;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st48;
	goto tr50;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st48;
	goto tr50;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
